smth (probably ModItems.java) broke

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "item.tutorialmod.sapphire": "Sapphire",
-  "item.tutorialmod.ruby": "Ruby"
+  "item.tutorialmod.ruby": "Ruby",
+  "itemgroup.new_ores": "New ores"
 }
